Cleaned up Makefile and TimespanInventory illustrations.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -71,17 +71,17 @@
 
 \includeonly{
     source/chapters/introduction,
-%    source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
-%    source/chapters/practicalities,
+    source/chapters/a-model-of-notation,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
+    source/chapters/practicalities,
     source/chapters/conclusion,
-%    source/chapters/score-aurora,
-%    source/chapters/score-plague-water,
-%    source/chapters/score-zaira,
-%    source/chapters/score-armilla,
-%    source/chapters/score-ersilia,
-%    source/appendices/appendices,
+    source/chapters/score-aurora,
+    source/chapters/score-plague-water,
+    source/chapters/score-zaira,
+    source/chapters/score-armilla,
+    source/chapters/score-ersilia,
+    source/appendices/appendices,
     source/endmatter/colophon
 }
 
