--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,26 @@
 
 
 
+@article{mccartney2002rethinking,
+  title={Rethinking the computer music language: SuperCollider},
+  author={McCartney, James},
+  journal={Computer Music Journal},
+  volume={26},
+  number={4},
+  pages={61--68},
+  year={2002},
+  publisher={MIT Press}}
+
+@article{taube1991common,
+	Author = {Taube, Heinrich},
+	Date-Added = {2015-01-31 20:52:45 +0000},
+	Date-Modified = {2015-01-31 23:11:42 +0000},
+	Journal = {Computer Music Journal},
+	Pages = {21--32},
+	Publisher = {JSTOR},
+	Title = {{Common Music: A Music Composition Language in Common Lisp and CLOS}},
+	Year = {1991}}
+
 @book{wishart1996sonic,
 	Author = {Wishart, T. and Emmerson, S.},
 	Date-Added = {2015-05-10 18:29:49 +0000},
