Cleaned up abstract spacing.

--- a/packages/Harvard/style.sty
+++ b/packages/Harvard/style.sty
@@ -74,10 +74,11 @@
 	\vspace*{20pt}
 	\scshape Abstract \\ \rm
 	\end{center}
-	\input{source/frontmatter/abstract}
+    \doublespacing \input{source/frontmatter/abstract}
 	\vspace*{\fill}
 	\newpage \lhead{} \rhead{}
 	\cfoot{\thepage}
+    \singlespacing
 }
 
 \newcommand{\dedicationpage}{
