--- a/dissertation.tex
+++ b/dissertation.tex
@@ -70,29 +70,20 @@
 }
 
 \includeonly{
-%    source/chapters/introduction,
-%    source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
-%    source/chapters/practicalities,
-%    source/chapters/conclusion,
-%    source/chapters/score-aurora,
-%    source/chapters/score-plague-water,
-%    source/chapters/score-zaira,
-%    source/chapters/score-armilla,
-%    source/chapters/score-ersilia,
-%    source/appendices/appendices,
+    source/chapters/introduction,
+    source/chapters/a-model-of-notation,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
+    source/chapters/practicalities,
+    source/chapters/conclusion,
+    source/chapters/score-aurora,
+    source/chapters/score-plague-water,
+    source/chapters/score-zaira,
+    source/chapters/score-armilla,
+    source/chapters/score-ersilia,
+    source/appendices/appendices,
     source/endmatter/colophon
 }
-
-%\excludeonly{
-%    source/chapters/score-aurora,
-%    source/chapters/score-plague-water,
-%    source/chapters/score-zaira,
-%    source/chapters/score-armilla,
-%    source/chapters/score-ersilia,
-%    source/appendices/appendices,
-%}
 
 \makeindex[columns=3, title=Index, intoc]
 
