Cleaned things up.

--- a/source/frontmatter/personalize.tex
+++ b/source/frontmatter/personalize.tex
@@ -16,5 +16,5 @@
 \pdOneYear{2006}
 
 %\pdTwoName{M.A.}
-%\pdTwoSchool{Monster's Univeristy}
+%\pdTwoSchool{Monster's University}
 %\pdTwoYear{2021}
